--- a/posts/test-post.mdx
+++ b/posts/test-post.mdx
@@ -1,6 +1,6 @@
 ---
-title: Design critiques at Figma
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
+title: Design critiques at Figma suchart
+description: "Suchart Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
 date: Jan 2 2021
 ---
 
