--- a/posts/test-post.mdx
+++ b/posts/test-post.mdx
@@ -4,4 +4,4 @@ description: "Suchart Consider that for a moment: everything we see around us is
 date: Jan 2 2021
 ---
 
-This is an example post. There's another one [here](/posts/example-post).
+This is an example suchart post. There's another one [here](/posts/example-post).
