--- a/posts/example-post.mdx
+++ b/posts/example-post.mdx
@@ -1,6 +1,6 @@
 ---
 title: How to create SVG-ready icon symbols in Sketch PART 2
-description: "Something has always existed. According to physics, there can never be true physical nothingness—though there can be times when existence resembles nothing, such as a vacuum (the state of minimum possible energy) (Phys.org). Creating a space where there are no quantum."
+description: "Something has always existed. According to ffffffphysics, there can never be true physical nothingness—though there can be times when existence resembles nothing, such as a vacuum (the state of minimum possible energy) (Phys.org). Creating a space where there are no quantum."
 date: May 8 2021
 ---
 
