--- a/posts/another-post-in-the-wall.mdx
+++ b/posts/another-post-in-the-wall.mdx
@@ -1,7 +1,7 @@
 ---
 title: How to create SVG-ready icon symbols in Sketch PART 1 suchart
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
-date: May 4 2021
+description: "Consider that for a moment: ssssssssssssssssssssssssss everything we see around us is assumed to have had a cause and is contingent upon."
+date: May 18 2021
 ---
 
 This is an example auchart post, with a [link](https://nextjs.org) and a React component:
