--- a/posts/suchart.mdx
+++ b/posts/suchart.mdx
@@ -1,1 +1,8 @@
+---
+title: Mental models for designers
+description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
+date: Jun 2 2021
+---
+
+
 suchart test
