--- a/posts/one-more-post.mdx
+++ b/posts/one-more-post.mdx
@@ -1,6 +1,6 @@
 ---
 title: Mental models for designers
-description: "Consider that for a moment: everytcsdsgsdgdggdgsdhing we see around us is assumed to have had a cause and is contingent upon."
+description: "."
 date: Jun 2 2021
 ---
 
